# unrealizedML

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
src/unrealizedML/io/: pickler.py  test_tensor.pkl
src/unrealizedML/io/nca/: data2d.py
src/unrealizedML/io/nca/data/: 0.pkl  1.pkl  2.pkl
src/unrealizedML/nn/nca/: FourierDiffNCA2D.py  NCA2D.py  NonSepConv2D.py  SepConv2D.py
tests/: test.io.nca.data2d.py  test.py
