[project]
name = unrealizedML
version = attr: unrealizedML.VERSION
author = Isaiah Cordova
author_email = isaiah.cordova21@gmail.com
description = A well-documented implementation of unrealized ML algorithms and architectures.
long_description = file: README.md

[project.urls]
Homepage = "https://github.com/khth0n/unrealizedML"
Issues = "https://github.com/khth0n/unrealizedML/issues"

[options]
python_requires = >=3.11.4
package_dir==src
packages=find:
install_requires=
    torch
    Pillow
    numpy
    matplotlib

[options.packages.find]
where=src